third_party/rust/cxx/v1/crate/tests/ui/empty_enum.stderr
error: explicit #[repr(...)] is required for enum without any variants
 --> $DIR/empty_enum.rs:3:5
  |
3 |     enum A {}
  |     ^^^^^^^^^
