third_party/rust/cxx/v1/crate/tests/ui/empty_enum.rs
#[cxx::bridge]
mod ffi {
    enum A {}
}

fn main() {}
